# MegRest

./: .gitignore  CMakeLists.txt  README.md  TODOs.org
detector/: CMakeLists.txt
detector/src/: PlanarAssembly_geo.cpp  PlanarAssembly_plain_geo.cpp
generator/inc/: TRestGeant4ParticleSourceCompton.h  TRestGeant4ParticleSourceSingleProcess.h
generator/src/: TRestGeant4ParticleSourceCompton.cxx  TRestGeant4ParticleSourceSingleProcess.cxx
geometry/compact/: CZT.xml  CZT_layer.xml  CZT_mono.xml  CZT_side.xml  DDEve.xml  Megat.xml  Passives.xml  Passives_simple.xml  TPC.xml
scripts/simulation/: batch_config.py
